fixed a button bug and missalignment both in codefixer

--- a/src/Components/Codefixer/Options.css
+++ b/src/Components/Codefixer/Options.css
@@ -56,6 +56,7 @@
 }
 
 .outputs {
+  padding: 8px;
   display: flex;
   flex-direction: column;
   width: 40%;
